--- a/app/views/spree/gateway/przelewy24/show.html.haml
+++ b/app/views/spree/gateway/przelewy24/show.html.haml
@@ -26,27 +26,28 @@
   %div{:class => "row", :"data-hook" => "checkout_content"}
     %div{:class => "columns alpha twelve", :"data-hook" => "checkout_form_wrapper"}
       =# form_for @order, :url => update_checkout_path(@order.state), :html => { :id => "checkout_form_#{@order.state}" } do |form|
-      = form_tag @gateway.preferred_url, :method => "post" do
+      = form_tag @gateway.post_url, :method => "post" do
         %fieldset{:id => "payment"}(data-hook)
           %legend= t(:payment_information)
           %p= t('przelewy24.choose_channel')
-          = javascript_include_tag "https://secure.przelewy24.pl/external/formy.php?id=15149&sort=2&encoding=utf-8&cols=3&width=600"
+          = javascript_include_tag "https://secure.przelewy24.pl/external/formy.php?id=#{@gateway.preferred_p24_id_sprzedawcy}&sort=2&encoding=utf-8&cols=3&width=600"
           :javascript
             m_formy();
           //list of obligatory fields to pass to przelewy24.pl
-          = hidden_field_tag 'p24_session_id', @gateway.preferred_p24_id_sprzedawcy
+          = hidden_field_tag 'p24_session_id', @p24_session_id
           = hidden_field_tag 'p24_id_sprzedawcy', @gateway.preferred_p24_id_sprzedawcy
-          = hidden_field_tag 'p24_kwota', (@order.total*100).to_i.to_s #total amount * 100
+          = hidden_field_tag 'p24_kwota', @gateway.p24_amount(@order.total)
           = hidden_field_tag 'p24_klient', "#{@bill_address.firstname} #{@bill_address.lastname}"
           = hidden_field_tag 'p24_adres', "#{@bill_address.address1} #{@bill_address.address2}"
           = hidden_field_tag 'p24_kod', @bill_address.zipcode
           = hidden_field_tag 'p24_miasto', @bill_address.city
           = hidden_field_tag 'p24_kraj', @bill_address.country.iso3
           = hidden_field_tag 'p24_email', (@order.email || @order.user.try(:email))
-          = hidden_field_tag 'p24_return_url_ok', @gateway.preferred_p24_return_url_ok
-          = hidden_field_tag 'p24_return_url_error', @gateway.preferred_p24_return_url_error
+          = hidden_field_tag 'p24_return_url_ok', gateway_przelewy24_comeback_url(:gateway_id => @gateway.id,:order_id => @order.id)
+          = hidden_field_tag 'p24_return_url_error', gateway_przelewy24_error_url(:gateway_id => @gateway.id,:order_id => @order.id)
+          = hidden_field_tag 'p24_opis', "#{Spree::Config[:site_name]} Order: #{@order.number}"
           = hidden_field_tag 'p24_language', @gateway.preferred_p24_language
-          = hidden_field_tag 'p24_crc', @gateway.preferred_p24_id_sprzedawcy
+          = hidden_field_tag 'p24_crc', @p24_crc
           
         %div{:class => "form-buttons", :"data-hook" => "buttons"}
           = submit_tag t(:save_and_continue), :class => 'continue button primary'
