--- a/app/views/spree/gateway/przelewy24/show.html.haml
+++ b/app/views/spree/gateway/przelewy24/show.html.haml
@@ -50,7 +50,7 @@
           = hidden_field_tag 'p24_crc', @p24_crc
           
         %div{:class => "form-buttons", :"data-hook" => "buttons"}
-          = submit_tag t(:save_and_continue), :class => 'continue button primary'
+          = submit_tag t(:przelewy24_payment), :class => 'continue button primary'
           :javascript
             disableSaveOnClick();
       
