error page view

--- a/app/views/spree/gateway/przelewy24/error.html.haml
+++ b/app/views/spree/gateway/przelewy24/error.html.haml
@@ -1,10 +1,11 @@
-%h1 t('przelewy24.error.headline')
-%p t('przelewy24.error.content')
+%h1= t('przelewy24.error.headline')
+%p= t('przelewy24.error.content')
 - if params[:error_code]
   %p
-    Error code:
+    = t('przelewy24.error.error_code')
     = params[:error_code]
 - if params[:error_descr]
   %p
-    Error description:
-    = params[:error_descr]
+    = t('przelewy24.error.error_description')
+    = Iconv.conv('utf-8', 'ISO-8859-2',params[:error_descr])
+%p= link_to t('przelewy24.error.order_comeback'), order_path(@order), :class => 'continue button primary'
